@startuml

abstract class AbstractFinalIVValidator
abstract class AbstractPerExpiryFinalIVValidator
class CompositeFinalIVValidator
class CrossedPnLFinalIVValidator

AbstractFinalIVValidator <|-- AbstractPerExpiryFinalIVValidator
AbstractFinalIVValidator <|-- CompositeFinalIVValidator
CompositeFinalIVValidator "0..n" o-- AbstractFinalIVValidator
AbstractPerExpiryFinalIVValidator <|-- CrossedPnLFinalIVValidator

@enduml